# simple_RULER_data

./: .gitignore  prepare.py  pyproject.toml  run.sh  synthetic.yaml  template.py  tokenizer.py
synthetic/: common_words_extraction.py  constants.py  freq_words_extraction.py  niah.py  qa.py  utils.py  variable_tracking.py
