[project]
name = "simple-ruler-data"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "~3.12"
dependencies = [
    "tenacity (>=9.1.2,<10.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "wonderwords (>=2.2.0,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "transformers (>=4.52.2,<5.0.0)",
    "importlib (>=1.0.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
